[package]
name = "kbd_stats"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev-rs = { version = "0.5.0", features = ["serde"] }
libc = "0.2"
notify-rust = "4"
regex = "1"
tui = "0.15"
termion = "1.5"
rand = "0.8.0"
